(most updated) generalised function for gross returns/performance calc

--- a/momentum-strat.ipynb
+++ b/momentum-strat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[1257 rows x 5 columns]"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
        "[1257 rows x 37 columns]"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,112 +1258,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gross performance of individual stock, strategy, and benchmark:\n",
+      "Gross performance/returns of individual stock, strategy, and benchmark:\n",
+      "\n",
       "META Gross Stock Performance: 1.6056\n",
-      "META Gross Strategy Performance: 1.0741\n",
-      "META Gross Benchmark Performance: 3.0619\n",
+      "META Strategy Performance: 1.0741\n",
+      "Gross Benchmark Performance: 3.0619\n",
       "\n",
       "AMZN Gross Stock Performance: 4.9863\n",
-      "AMZN Gross Strategy Performance: 2.5715\n",
-      "AMZN Gross Benchmark Performance: 3.0619\n",
+      "AMZN Strategy Performance: 2.5715\n",
+      "Gross Benchmark Performance: 3.0619\n",
       "\n",
       "AAPL Gross Stock Performance: 1.6664\n",
-      "AAPL Gross Strategy Performance: 0.1993\n",
-      "AAPL Gross Benchmark Performance: 3.0619\n",
+      "AAPL Strategy Performance: 0.1993\n",
+      "Gross Benchmark Performance: 3.0619\n",
       "\n",
       "NFLX Gross Stock Performance: 5.4858\n",
-      "NFLX Gross Strategy Performance: 1.4969\n",
-      "NFLX Gross Benchmark Performance: 3.0619\n",
+      "NFLX Strategy Performance: 1.4969\n",
+      "Gross Benchmark Performance: 3.0619\n",
       "\n",
       "GOOGL Gross Stock Performance: 1.5299\n",
-      "GOOGL Gross Strategy Performance: 0.5965\n",
-      "GOOGL Gross Benchmark Performance: 3.0619\n",
+      "GOOGL Strategy Performance: 0.5965\n",
+      "Gross Benchmark Performance: 3.0619\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "### Compute the stock and strategy gross performance for all 5 individual stocks\n",
+    "### Compute the stock and strategy gross performance/returns for all 5 individual stocks and equal-weighted strategy\n",
     "\n",
-    "def calculate_gross_regular_returns(stock, bt_data):\n",
-    "    \"\"\"Calculate and display gross regular returns for stock, strategy, and benchmark from bt_data.\"\"\"\n",
+    "def calculate_gross_regular_returns(stock_or_strategy, bt_data, is_equal_weighted=False):\n",
+    "    \"\"\"Calculate gross regular returns for individual stock strategies and equal-weighted strategy and benchmark.\"\"\"\n",
     "    \n",
-    "    # Calculate cumulative log stock, strategy, and benchmark returns\n",
-    "    cumulative_stock_log_return = bt_data[f'{stock}_Log_Returns'].sum()\n",
-    "    cumulative_strategy_log_return = bt_data[f'{stock}_Strategy_Log_Returns'].sum()\n",
+    "    if is_equal_weighted:\n",
+    "        # Calculate for equal-weighted strategy\n",
+    "        cumulative_strategy_log_return = bt_data['Equal_Weighted_Strategy_Log_Returns'].sum()\n",
+    "        strategy_label = \"Equal-Weighted Strategy\"\n",
+    "        \n",
+    "    else:\n",
+    "        # Calculate for individual stock\n",
+    "        cumulative_strategy_log_return = bt_data[f'{stock_or_strategy}_Strategy_Log_Returns'].sum()\n",
+    "        cumulative_stock_log_return = bt_data[f'{stock_or_strategy}_Log_Returns'].sum()\n",
+    "        gross_stock_return = np.exp(cumulative_stock_log_return) - 1\n",
+    "        print(f'{stock_or_strategy} Gross Stock Performance: {gross_stock_return:.4f}')\n",
+    "        strategy_label = f'{stock_or_strategy} Strategy'\n",
+    "    \n",
+    "    # Calculate cumulative benchmark log returns\n",
     "    cumulative_benchmark_log_return = bt_data['Benchmark_Log_Returns'].sum()\n",
-    "\n",
+    "    \n",
     "    # Convert cumulative log returns to gross regular returns\n",
-    "    gross_stock_return = np.exp(cumulative_stock_log_return) - 1\n",
     "    gross_strategy_return = np.exp(cumulative_strategy_log_return) - 1\n",
     "    gross_benchmark_return = np.exp(cumulative_benchmark_log_return) - 1\n",
+    "    \n",
+    "    # Print the gross performance of the strategy and benchmark\n",
+    "    print(f'{strategy_label} Performance: {gross_strategy_return:.4f}')\n",
+    "    print(f'Gross Benchmark Performance: {gross_benchmark_return:.4f}\\n')\n",
     "\n",
-    "    # Print the gross performance of the stock, strategy, and benchmark\n",
-    "    print(f'{stock} Gross Stock Performance: {gross_stock_return:.4f}')\n",
-    "    print(f'{stock} Gross Strategy Performance: {gross_strategy_return:.4f}')\n",
-    "    print(f'{stock} Gross Benchmark Performance: {gross_benchmark_return:.4f}\\n')\n",
+    "    # Performance comparison for equal-weighted strategy and benchmark\n",
+    "    if is_equal_weighted:\n",
+    "        if gross_strategy_return > gross_benchmark_return:\n",
+    "            print(f'The {strategy_label} outperformed the benchmark by {gross_strategy_return - gross_benchmark_return:.4f}')\n",
+    "        else:\n",
+    "            print(f'The benchmark outperformed the {strategy_label} by {gross_benchmark_return - gross_strategy_return:.4f}')\n",
     "\n",
-    "\n",
-    "print(\"Gross performance of individual stock, strategy, and benchmark:\")\n",
+    "# Calculate performance for individual stocks\n",
+    "print(\"Gross performance/returns of individual stock, strategy, and benchmark:\\n\")\n",
     "for stock in stocks:\n",
     "    calculate_gross_regular_returns(stock, bt_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Gross performance/returns of equal-weighted strategy and benchmark:\n",
       "\n",
-      "Gross performance of equal-weighted strategy and benchmark:\n",
-      "Gross Equal-Weighted Strategy Performance: 1.3248\n",
+      "Equal-Weighted Strategy Performance: 1.3248\n",
       "Gross Benchmark Performance: 3.0619\n",
       "\n",
-      "The benchmark outperformed the equal-weighted strategy by 1.7371\n"
+      "The benchmark outperformed the Equal-Weighted Strategy by 1.7371\n"
      ]
     }
    ],
    "source": [
-    "# Gross performance of equal weighted strategy\n",
-    "\n",
-    "def calculate_equal_weighted_strategy_performance(bt_data):\n",
-    "    \"\"\"Calculate and display gross returns for the equal-weighted strategy and compare with the benchmark.\"\"\"\n",
-    "    \n",
-    "    # Calculate cumulative log returns for equal-weighted strategy and benchmark\n",
-    "    cumulative_equal_weighted_strategy_log_return = bt_data['Equal_Weighted_Strategy_Log_Returns'].sum()\n",
-    "    cumulative_benchmark_log_return = bt_data['Benchmark_Log_Returns'].sum()\n",
-    "\n",
-    "    # Convert cumulative log returns to gross regular returns\n",
-    "    gross_equal_weighted_strategy_return = np.exp(cumulative_equal_weighted_strategy_log_return) - 1\n",
-    "    gross_benchmark_return = np.exp(cumulative_benchmark_log_return) - 1\n",
-    "\n",
-    "    # Print the gross performance of the equal-weighted strategy and benchmark\n",
-    "    print(f'Gross Equal-Weighted Strategy Performance: {gross_equal_weighted_strategy_return:.4f}')\n",
-    "    print(f'Gross Benchmark Performance: {gross_benchmark_return:.4f}\\n')\n",
-    "    \n",
-    "    if gross_equal_weighted_strategy_return > gross_benchmark_return:\n",
-    "        print(f'The equal-weighted strategy outperformed the benchmark by {gross_equal_weighted_strategy_return - gross_benchmark_return:.4f}')\n",
-    "    else:\n",
-    "        print(f'The benchmark outperformed the equal-weighted strategy by {gross_benchmark_return - gross_equal_weighted_strategy_return:.4f}')\n",
-    "\n",
-    "print(\"\\nGross performance of equal-weighted strategy and benchmark:\")\n",
-    "calculate_equal_weighted_strategy_performance(bt_data)"
+    "# Calculate performance for the equal-weighted strategy\n",
+    "print(\"Gross performance/returns of equal-weighted strategy and benchmark:\\n\")\n",
+    "calculate_gross_regular_returns('Equal_Weighted_Strategy', bt_data, is_equal_weighted=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
