add code for calculating equal weighted portfolio

--- a/trading-strategy.ipynb
+++ b/trading-strategy.ipynb
@@ -3095,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3129,6 +3129,148 @@
     "\tprint(f\"Information Ratio: {informationRatio:.4f}\")\n",
     "\tprint(\"\\n\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6.6 calculating equal weights porfolio metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "Standard Deviation: 0.013037358586132801\n",
+      "Annual Return: 0.2752544058508355\n",
+      "Sharpe Ratio: 1.2798578909845775\n",
+      "Sortino Ratio: 1.6204911907465582\n",
+      "Treynor Ratio: nan\n",
+      "Max Drawdown: -0.30980801872900743\n",
+      "Tracking Error: 0.007880128882616555\n",
+      "Information Ratio: -0.019990695385578384\n",
+      "Beta: nan\n",
+      "Alpha: nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Annualize factor (252 trading days per year)\n",
+    "def annualize(factor, periods_per_year=252):\n",
+    "    return factor * np.sqrt(periods_per_year)\n",
+    "\n",
+    "# Calculate standard deviation\n",
+    "def standard_deviation(returns):\n",
+    "    return np.std(returns)\n",
+    "\n",
+    "# Calculate annual return\n",
+    "def annual_returns(returns):\n",
+    "    cumulative_return = (1 + returns).prod() - 1\n",
+    "    return (1 + cumulative_return) ** (252 / len(returns)) - 1\n",
+    "\n",
+    "# Calculate Sharpe Ratio\n",
+    "def sharpe_ratio(returns, risk_free_rate=0):\n",
+    "    excess_returns = returns - risk_free_rate / 252\n",
+    "    return np.mean(excess_returns) / np.std(excess_returns) * np.sqrt(252)\n",
+    "\n",
+    "# Calculate Sortino Ratio\n",
+    "def sortino_ratio(returns, risk_free_rate=0):\n",
+    "    downside_returns = returns[returns < 0]\n",
+    "    downside_std = np.std(downside_returns)\n",
+    "    excess_returns = returns - risk_free_rate / 252\n",
+    "    return np.mean(excess_returns) / downside_std * np.sqrt(252)\n",
+    "\n",
+    "# Calculate Treynor Ratio\n",
+    "def treynor_ratio(returns, benchmark_returns, risk_free_rate=0):\n",
+    "    beta = np.cov(returns, benchmark_returns)[0, 1] / np.var(benchmark_returns)\n",
+    "    excess_returns = np.mean(returns) - risk_free_rate / 252\n",
+    "    return excess_returns / beta\n",
+    "\n",
+    "# Calculate Max Drawdown\n",
+    "def max_drawdown(returns):\n",
+    "    cumulative_returns = (1 + returns).cumprod()\n",
+    "    peak = cumulative_returns.cummax()\n",
+    "    drawdown = (cumulative_returns - peak) / peak\n",
+    "    return drawdown.min()\n",
+    "\n",
+    "# Calculate Tracking Error\n",
+    "def tracking_error(returns, benchmark_returns):\n",
+    "    return np.std(returns - benchmark_returns)\n",
+    "\n",
+    "# Calculate Information Ratio\n",
+    "def information_ratio(returns, benchmark_returns):\n",
+    "    return np.mean(returns - benchmark_returns) / tracking_error(returns, benchmark_returns)\n",
+    "\n",
+    "# Calculate Beta\n",
+    "def beta(returns, benchmark_returns):\n",
+    "    covariance = np.cov(returns, benchmark_returns)[0, 1]\n",
+    "    benchmark_variance = np.var(benchmark_returns)\n",
+    "    return covariance / benchmark_variance\n",
+    "\n",
+    "# Calculate Alpha\n",
+    "def alpha(returns, benchmark_returns, risk_free_rate=0):\n",
+    "    beta_value = beta(returns, benchmark_returns)\n",
+    "    expected_returns = risk_free_rate / 252 + beta_value * (benchmark_returns.mean() - risk_free_rate / 252)\n",
+    "    return np.mean(returns) - expected_returns\n",
+    "\n",
+    "\n",
+    "# Example data (you can replace these with your actual returns data)\n",
+    "portfolio_returns = benchmark['Portfolio_Return']\n",
+    "benchmark_returns = benchmark['Benchmark_Return']\n",
+    "\n",
+    "# Standard Deviation\n",
+    "stddev = standard_deviation(portfolio_returns)\n",
+    "\n",
+    "# Annual Return\n",
+    "annual_return = annual_returns(portfolio_returns)\n",
+    "\n",
+    "# Sharpe Ratio\n",
+    "sharpe = sharpe_ratio(portfolio_returns)\n",
+    "\n",
+    "# Sortino Ratio\n",
+    "sortino = sortino_ratio(portfolio_returns)\n",
+    "\n",
+    "# Treynor Ratio\n",
+    "treynor = treynor_ratio(portfolio_returns, benchmark_returns)\n",
+    "\n",
+    "# Max Drawdown\n",
+    "max_drawdown_value = max_drawdown(portfolio_returns)\n",
+    "\n",
+    "# Tracking Error\n",
+    "tracking_error_value = tracking_error(portfolio_returns, benchmark_returns)\n",
+    "\n",
+    "# Information Ratio\n",
+    "information_ratio_value = information_ratio(portfolio_returns, benchmark_returns)\n",
+    "\n",
+    "# Beta\n",
+    "beta_value = beta(portfolio_returns, benchmark_returns)\n",
+    "\n",
+    "# Alpha\n",
+    "alpha_value = alpha(portfolio_returns, benchmark_returns)\n",
+    "\n",
+    "# Print Results\n",
+    "print(f\"Standard Deviation: {stddev}\")\n",
+    "print(f\"Annual Return: {annual_return}\")\n",
+    "print(f\"Sharpe Ratio: {sharpe}\")\n",
+    "print(f\"Sortino Ratio: {sortino}\")\n",
+    "print(f\"Treynor Ratio: {treynor}\")\n",
+    "print(f\"Max Drawdown: {max_drawdown_value}\")\n",
+    "print(f\"Tracking Error: {tracking_error_value}\")\n",
+    "print(f\"Information Ratio: {information_ratio_value}\")\n",
+    "print(f\"Beta: {beta_value}\")\n",
+    "print(f\"Alpha: {alpha_value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
