modify equal weight metrics

--- a/trading-strategy.ipynb
+++ b/trading-strategy.ipynb
@@ -3139,24 +3139,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nan\n",
-      "Standard Deviation: 0.013037358586132801\n",
-      "Annual Return: 0.2752544058508355\n",
-      "Sharpe Ratio: 1.2798578909845775\n",
-      "Sortino Ratio: 1.6204911907465582\n",
-      "Treynor Ratio: nan\n",
-      "Max Drawdown: -0.30980801872900743\n",
-      "Tracking Error: 0.007880128882616555\n",
-      "Information Ratio: -0.019990695385578384\n",
-      "Beta: nan\n",
-      "Alpha: nan\n"
+      "Date\n",
+      "2015-01-05   -0.000000\n",
+      "2015-01-06    0.000000\n",
+      "2015-01-07    0.000000\n",
+      "2015-01-08    0.000000\n",
+      "2015-01-09    0.000000\n",
+      "                ...   \n",
+      "2019-12-23    0.001532\n",
+      "2019-12-24   -0.002119\n",
+      "2019-12-26    0.017806\n",
+      "2019-12-27   -0.002945\n",
+      "2019-12-30   -0.010527\n",
+      "Name: Portfolio_Return, Length: 1256, dtype: float64\n",
+      "Date\n",
+      "2015-01-05   -0.027277\n",
+      "2015-01-06   -0.014747\n",
+      "2015-01-07    0.003676\n",
+      "2015-01-08    0.022589\n",
+      "2015-01-09   -0.008413\n",
+      "                ...   \n",
+      "2019-12-23   -0.003227\n",
+      "2019-12-24   -0.001814\n",
+      "2019-12-26    0.010952\n",
+      "2019-12-27   -0.004645\n",
+      "2019-12-30   -0.014182\n",
+      "Name: Benchmark_Return, Length: 1256, dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.699835450699392"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "portfolio_returns = benchmark['Portfolio_Return'].dropna()\n",
+    "benchmark_returns = benchmark['Benchmark_Return'].dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard Deviation: 0.0130\n",
+      "Annual Return: 0.2755\n",
+      "Sharpe Ratio: 1.2799\n",
+      "Sortino Ratio: 1.6205\n",
+      "Treynor Ratio: 0.0015\n",
+      "Max Drawdown: -0.3098\n",
+      "Tracking Error: 0.0079\n",
+      "Information Ratio: -0.0200\n",
+      "Beta: 0.6998\n",
+      "Alpha: 0.0002\n"
      ]
     }
    ],
@@ -3221,8 +3273,8 @@
     "\n",
     "\n",
     "# Example data (you can replace these with your actual returns data)\n",
-    "portfolio_returns = benchmark['Portfolio_Return']\n",
-    "benchmark_returns = benchmark['Benchmark_Return']\n",
+    "portfolio_returns = benchmark['Portfolio_Return'].dropna()\n",
+    "benchmark_returns = benchmark['Benchmark_Return'].dropna()\n",
     "\n",
     "# Standard Deviation\n",
     "stddev = standard_deviation(portfolio_returns)\n",
@@ -3255,16 +3307,16 @@
     "alpha_value = alpha(portfolio_returns, benchmark_returns)\n",
     "\n",
     "# Print Results\n",
-    "print(f\"Standard Deviation: {stddev}\")\n",
-    "print(f\"Annual Return: {annual_return}\")\n",
-    "print(f\"Sharpe Ratio: {sharpe}\")\n",
-    "print(f\"Sortino Ratio: {sortino}\")\n",
-    "print(f\"Treynor Ratio: {treynor}\")\n",
-    "print(f\"Max Drawdown: {max_drawdown_value}\")\n",
-    "print(f\"Tracking Error: {tracking_error_value}\")\n",
-    "print(f\"Information Ratio: {information_ratio_value}\")\n",
-    "print(f\"Beta: {beta_value}\")\n",
-    "print(f\"Alpha: {alpha_value}\")\n"
+    "print(f\"Standard Deviation: {stddev:.4f}\")\n",
+    "print(f\"Annual Return: {annual_return:.4f}\")\n",
+    "print(f\"Sharpe Ratio: {sharpe:.4f}\")\n",
+    "print(f\"Sortino Ratio: {sortino:.4f}\")\n",
+    "print(f\"Treynor Ratio: {treynor:.4f}\")\n",
+    "print(f\"Max Drawdown: {max_drawdown_value:.4f}\")\n",
+    "print(f\"Tracking Error: {tracking_error_value:.4f}\")\n",
+    "print(f\"Information Ratio: {information_ratio_value:.4f}\")\n",
+    "print(f\"Beta: {beta_value:.4f}\")\n",
+    "print(f\"Alpha: {alpha_value:.4f}\")\n"
    ]
   },
   {
