--- a/trading-strategy.ipynb
+++ b/trading-strategy.ipynb
@@ -17,49 +17,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: ta in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (0.11.0)\n",
-      "Requirement already satisfied: numpy in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from ta) (1.22.4)\n",
-      "Requirement already satisfied: pandas in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from ta) (1.4.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from pandas->ta) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from pandas->ta) (2023.4)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas->ta) (1.16.0)\n",
+      "Requirement already satisfied: ta in c:\\users\\alver\\anaconda3\\lib\\site-packages (0.11.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\alver\\anaconda3\\lib\\site-packages (from ta) (1.26.4)\n",
+      "Requirement already satisfied: pandas in c:\\users\\alver\\anaconda3\\lib\\site-packages (from ta) (1.4.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from pandas->ta) (2.8.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error processing line 1 of C:\\Users\\alver\\anaconda3\\lib\\site-packages\\vision-1.0.0-py3.9-nspkg.pth:\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Requirement already satisfied: dash in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (2.18.1)\n",
-      "Requirement already satisfied: Flask<3.1,>=1.0.4 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (1.1.2)\n",
-      "Requirement already satisfied: Werkzeug<3.1 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (2.0.3)\n",
-      "Requirement already satisfied: plotly>=5.0.0 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (5.6.0)\n",
-      "Requirement already satisfied: dash-html-components==2.0.0 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (2.0.0)\n",
-      "Requirement already satisfied: dash-core-components==2.0.0 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (2.0.0)\n",
-      "Requirement already satisfied: dash-table==5.0.0 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (5.0.0)\n",
-      "Requirement already satisfied: importlib-metadata in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (4.11.3)\n",
-      "Requirement already satisfied: typing-extensions>=4.1.1 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (4.10.0)\n",
-      "Requirement already satisfied: requests in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (2.31.0)\n",
-      "Requirement already satisfied: retrying in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (1.3.4)\n",
-      "Requirement already satisfied: nest-asyncio in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (1.5.5)\n",
-      "Requirement already satisfied: setuptools in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from dash) (61.2.0)\n",
-      "Requirement already satisfied: Jinja2>=2.10.1 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from Flask<3.1,>=1.0.4->dash) (2.11.3)\n",
-      "Requirement already satisfied: itsdangerous>=0.24 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from Flask<3.1,>=1.0.4->dash) (2.0.1)\n",
-      "Requirement already satisfied: click>=5.1 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from Flask<3.1,>=1.0.4->dash) (8.0.4)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from plotly>=5.0.0->dash) (8.2.3)\n",
-      "Requirement already satisfied: six in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from plotly>=5.0.0->dash) (1.16.0)\n",
-      "Requirement already satisfied: zipp>=0.5 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from importlib-metadata->dash) (3.7.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from requests->dash) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from requests->dash) (3.3)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from requests->dash) (1.26.9)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from requests->dash) (2021.10.8)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/zuohui/opt/anaconda3/lib/python3.9/site-packages (from Jinja2>=2.10.1->Flask<3.1,>=1.0.4->dash) (2.0.1)\n",
+      "  Traceback (most recent call last):\n",
+      "    File \"C:\\Users\\alver\\anaconda3\\lib\\site.py\", line 169, in addpackage\n",
+      "      exec(line)\n",
+      "    File \"<string>\", line 1, in <module>\n",
+      "    File \"<frozen importlib._bootstrap>\", line 562, in module_from_spec\n",
+      "  AttributeError: 'NoneType' object has no attribute 'loader'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from pandas->ta) (2024.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas->ta) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+      "Remainder of file ignored\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: dash in c:\\users\\alver\\anaconda3\\lib\\site-packages (2.18.1)\n",
+      "Requirement already satisfied: Flask<3.1,>=1.0.4 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (3.0.3)\n",
+      "Requirement already satisfied: Werkzeug<3.1 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (3.0.4)\n",
+      "Requirement already satisfied: plotly>=5.0.0 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (5.6.0)\n",
+      "Requirement already satisfied: dash-html-components==2.0.0 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (2.0.0)"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error processing line 1 of C:\\Users\\alver\\anaconda3\\lib\\site-packages\\vision-1.0.0-py3.9-nspkg.pth:\n",
+      "\n",
+      "  Traceback (most recent call last):\n",
+      "    File \"C:\\Users\\alver\\anaconda3\\lib\\site.py\", line 169, in addpackage\n",
+      "      exec(line)\n",
+      "    File \"<string>\", line 1, in <module>\n",
+      "    File \"<frozen importlib._bootstrap>\", line 562, in module_from_spec\n",
+      "  AttributeError: 'NoneType' object has no attribute 'loader'\n",
+      "\n",
+      "Remainder of file ignored\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: dash-core-components==2.0.0 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (2.0.0)\n",
+      "Requirement already satisfied: dash-table==5.0.0 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (5.0.0)\n",
+      "Requirement already satisfied: importlib-metadata in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (4.11.3)\n",
+      "Requirement already satisfied: typing-extensions>=4.1.1 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (4.12.2)\n",
+      "Requirement already satisfied: requests in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (2.32.3)\n",
+      "Requirement already satisfied: retrying in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (1.3.4)\n",
+      "Requirement already satisfied: nest-asyncio in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (1.5.5)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\alver\\anaconda3\\lib\\site-packages (from dash) (61.2.0)\n",
+      "Requirement already satisfied: Jinja2>=3.1.2 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from Flask<3.1,>=1.0.4->dash) (3.1.4)\n",
+      "Requirement already satisfied: itsdangerous>=2.1.2 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from Flask<3.1,>=1.0.4->dash) (2.2.0)\n",
+      "Requirement already satisfied: click>=8.1.3 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from Flask<3.1,>=1.0.4->dash) (8.1.7)\n",
+      "Requirement already satisfied: blinker>=1.6.2 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from Flask<3.1,>=1.0.4->dash) (1.8.2)\n",
+      "Requirement already satisfied: zipp>=0.5 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from importlib-metadata->dash) (3.7.0)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from plotly>=5.0.0->dash) (8.5.0)\n",
+      "Requirement already satisfied: six in c:\\users\\alver\\anaconda3\\lib\\site-packages (from plotly>=5.0.0->dash) (1.16.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from Werkzeug<3.1->dash) (2.1.5)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from requests->dash) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from requests->dash) (3.3)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from requests->dash) (1.26.9)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\alver\\anaconda3\\lib\\site-packages (from requests->dash) (2021.10.8)\n",
+      "Requirement already satisfied: colorama in c:\\users\\alver\\anaconda3\\lib\\site-packages (from click>=8.1.3->Flask<3.1,>=1.0.4->dash) (0.4.6)\n"
      ]
     }
    ],
@@ -77,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,17 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  5 of 5 completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meta = 'META'\n",
     "amazon = \"AMZN\"\n",
@@ -3103,11 +3148,11 @@
     "\tbt_data = stockList[stock]['strat']\n",
     "\tsharpe = sharpe_ratio(bt_data)\n",
     "\tsortino = sortino_ratio(bt_data)\n",
-    "\ttreynor = treynor_ratio(bt_data, beta=1.2)\n",
+    "\tbetaInfo = beta(bt_data)\n",
+    "\ttreynor = treynor_ratio(bt_data, betaInfo)\n",
     "\tmaxDrawdown = max_drawdown(bt_data)\n",
     "\ttrackingError = tracking_error(bt_data)\n",
     "\tinformationRatio = information_ratio(bt_data)\n",
-    "\tbetaInfo = beta(bt_data)\n",
     "\talphaInfo = alpha(bt_data)\n",
     "\tstddev = standard_deviation(bt_data)\n",
     "\tannual_return = annual_returns(bt_data)\n",
@@ -3191,6 +3236,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining methods to help with portfolio performance evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 187,
    "metadata": {},
@@ -3222,51 +3274,51 @@
     "    return np.std(returns)\n",
     "\n",
     "# Calculate annual return\n",
-    "def annual_returns(returns):\n",
+    "def annual_returns_portfolio(returns):\n",
     "    cumulative_return = (1 + returns).prod() - 1\n",
     "    return (1 + cumulative_return) ** (252 / len(returns)) - 1\n",
     "\n",
     "# Calculate Sharpe Ratio\n",
-    "def sharpe_ratio(returns, risk_free_rate=0):\n",
+    "def sharpe_ratio_portfolio(returns, risk_free_rate=0):\n",
     "    excess_returns = returns - risk_free_rate / 252\n",
     "    return np.mean(excess_returns) / np.std(excess_returns) * np.sqrt(252)\n",
     "\n",
     "# Calculate Sortino Ratio\n",
-    "def sortino_ratio(returns, risk_free_rate=0):\n",
+    "def sortino_ratio_portfolio(returns, risk_free_rate=0):\n",
     "    downside_returns = returns[returns < 0]\n",
     "    downside_std = np.std(downside_returns)\n",
     "    excess_returns = returns - risk_free_rate / 252\n",
     "    return np.mean(excess_returns) / downside_std * np.sqrt(252)\n",
     "\n",
     "# Calculate Treynor Ratio\n",
-    "def treynor_ratio(returns, benchmark_returns, risk_free_rate=0):\n",
+    "def treynor_ratio_portfolio(returns, benchmark_returns, risk_free_rate=0):\n",
     "    beta = np.cov(returns, benchmark_returns)[0, 1] / np.var(benchmark_returns)\n",
     "    excess_returns = np.mean(returns) - risk_free_rate / 252\n",
     "    return excess_returns / beta\n",
     "\n",
     "# Calculate Max Drawdown\n",
-    "def max_drawdown(returns):\n",
+    "def max_drawdown_portfolio(returns):\n",
     "    cumulative_returns = (1 + returns).cumprod()\n",
     "    peak = cumulative_returns.cummax()\n",
     "    drawdown = (cumulative_returns - peak) / peak\n",
     "    return drawdown.min()\n",
     "\n",
     "# Calculate Tracking Error\n",
-    "def tracking_error(returns, benchmark_returns):\n",
+    "def tracking_error_portfolio(returns, benchmark_returns):\n",
     "    return np.std(returns - benchmark_returns)\n",
     "\n",
     "# Calculate Information Ratio\n",
-    "def information_ratio(returns, benchmark_returns):\n",
+    "def information_ratio_portfolio(returns, benchmark_returns):\n",
     "    return np.mean(returns - benchmark_returns) / tracking_error(returns, benchmark_returns)\n",
     "\n",
     "# Calculate Beta\n",
-    "def beta(returns, benchmark_returns):\n",
+    "def beta_portfolio(returns, benchmark_returns):\n",
     "    covariance = np.cov(returns, benchmark_returns)[0, 1]\n",
     "    benchmark_variance = np.var(benchmark_returns)\n",
     "    return covariance / benchmark_variance\n",
     "\n",
     "# Calculate Alpha\n",
-    "def alpha(returns, benchmark_returns, risk_free_rate=0):\n",
+    "def alpha_portfolio(returns, benchmark_returns, risk_free_rate=0):\n",
     "    beta_value = beta(returns, benchmark_returns)\n",
     "    expected_returns = risk_free_rate / 252 + beta_value * (benchmark_returns.mean() - risk_free_rate / 252)\n",
     "    return np.mean(returns) - expected_returns\n",
@@ -3280,31 +3332,31 @@
     "stddev = standard_deviation(portfolio_returns)\n",
     "\n",
     "# Annual Return\n",
-    "annual_return = annual_returns(portfolio_returns)\n",
+    "annual_return = annual_returns_portfolio(portfolio_returns)\n",
     "\n",
     "# Sharpe Ratio\n",
-    "sharpe = sharpe_ratio(portfolio_returns)\n",
+    "sharpe = sharpe_ratio_portfolio(portfolio_returns)\n",
     "\n",
     "# Sortino Ratio\n",
-    "sortino = sortino_ratio(portfolio_returns)\n",
+    "sortino = sortino_ratio_portfolio(portfolio_returns)\n",
     "\n",
     "# Treynor Ratio\n",
-    "treynor = treynor_ratio(portfolio_returns, benchmark_returns)\n",
+    "treynor = treynor_ratio_portfolio(portfolio_returns, benchmark_returns)\n",
     "\n",
     "# Max Drawdown\n",
-    "max_drawdown_value = max_drawdown(portfolio_returns)\n",
+    "max_drawdown_value = max_drawdown_portfolio(portfolio_returns)\n",
     "\n",
     "# Tracking Error\n",
-    "tracking_error_value = tracking_error(portfolio_returns, benchmark_returns)\n",
+    "tracking_error_value = tracking_error_portfolio(portfolio_returns, benchmark_returns)\n",
     "\n",
     "# Information Ratio\n",
-    "information_ratio_value = information_ratio(portfolio_returns, benchmark_returns)\n",
+    "information_ratio_value = information_ratio_portfolio(portfolio_returns, benchmark_returns)\n",
     "\n",
     "# Beta\n",
-    "beta_value = beta(portfolio_returns, benchmark_returns)\n",
+    "beta_value = beta_portfolio(portfolio_returns, benchmark_returns)\n",
     "\n",
     "# Alpha\n",
-    "alpha_value = alpha(portfolio_returns, benchmark_returns)\n",
+    "alpha_value = alpha_portfolio(portfolio_returns, benchmark_returns)\n",
     "\n",
     "# Print Results\n",
     "print(f\"Standard Deviation: {stddev:.4f}\")\n",
