--- a/trading-strategy.ipynb
+++ b/trading-strategy.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color = 'red'> Strategy </font>\n",
-    "### Bollinger bands are comprised of a simple moving average along with upper and lower bands (typically 2 STDDEV away). The bands widen and narrow as the volatility of the underlying asset changes. "
+    "# <font color = 'red'> Momentum and Mean Reversion Strategy </font>"
    ]
   },
   {
